[package]
name = "pr_status"
version = "0.1.0"
authors = ["Mark Schmidt <mschmidt@ocient.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking", "json"]}
error-chain = "0.12.4"
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }